base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: homeassistant
spec:
  ports:
  - name: http
    port: 80
    appProtocol: HTTP
    protocol: TCP
    targetPort: 8123
  selector:
    app: homeassistant
  type: LoadBalancer
