base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  rules:
    - host: homeassistant.n9oh.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homeassistant
                port:
                  number: 80
